syntax = "proto3";

package api;

import "./common.proto";
option go_package = "api";

service Account{
  rpc CreateAccount(CreateAccountRequest) returns (Empty);
  rpc ListAccount(ListAccountRequest) returns (Empty);
  // rpc UpdateAccount(UpdateAccountRequest) returns (google.protobuf.Empty);
  // rpc DeleteAccount(DeleteAccountRequest) returns (google.protobuf.Empty);
  // rpc InactiveAccount(InactiveAccountRequest) returns (google.protobuf.Empty);
  // rpc ActiveAccount(ActiveAccountRequest) returns (google.protobuf.Empty);
}

message CreateAccountRequest{
  string UserName = 1;
  string Password = 2;
  string DisplayName = 3;
}

message ListAccountRequest{

}